# vibetools

./: .coderabbit.yaml  PLAN.md  README.md  o3helper.js  workers.md
ci-gates/: README.md
ci-gates/bun/: README.md  ci.yml
ci-gates/deno/: README.md  ci.yml
ci-gates/python/: README.md  ci.yml
ci-gates/rust/: README.md  ci.yml
ci-gates/typescript/: README.md  ci.yml
docs/: MOCKING_STRATEGY.md  TESTING_GUIDE.md  TYPESCRIPT_STANDARDS.md
docs/writing/: styleguide.md
executor/: .gitignore  README.md  sample-plan-config.json
executor/scripts/: plan-control.sh  plan-executor.sh  plan-monitor.sh  test-execution.sh
executor/test-plan/: package.json
executor/test-plan/plan/: 01-hello-stub.md  01a-hello-stub-verification.md  02-hello-tdd.md  03-hello-impl.md
executor/test-plan/src/: hello.ts  index.ts
planning/templates/: README.md
planning/templates/_base/: COORDINATING.md  PLAN-TEMPLATE.md  PLAN.md
planning/templates/python/: RULES.md
planning/templates/rust/: RULES.md
planning/templates/typescript/: RULES.md
project-setup/: README.md  setup.sh
project-setup/bun/: README.md  biome.json  bunfig.toml  init.sh  package.devdeps.json  tsconfig.json
project-setup/deno/: README.md  deno.json  init.sh
project-setup/python/: README.md  init.sh  pyproject.toml
project-setup/rust/: .rustfmt.toml  README.md  cargo.snippet.toml  clippy.toml  init.sh  lints.snippet.toml
project-setup/rust/.cargo/: config.toml
project-setup/typescript/: README.md  eslint.config.js  init.sh  package.devdeps.json  tsconfig.json
research/ai-code-review-study/: README.md  SHA256SUMS  build-publication.sh  compiled-reports.md  megareport.md
research/ai-code-review-study/coderabbit/: report.md
research/ai-code-review-study/coderabbit/sources/: commands.md  evidence-index.md  excluded-rate-limited-reviews.csv  file-inventory.txt  rate-limit-events.csv  sampled-findings.csv  sampled-thread-extracts.md
research/ai-code-review-study/coderabbit/throttling/: chart-timeseries.csv  commands.md  config-history.csv  evidence-index.md  file-inventory.txt  generate-line-chart.py  github-extracts.md  methodology.md  period-summary.csv  policy-extracts.md  policy-timeline.csv  pr-activity-by-week.csv  rate-limit-events.csv  report.md  repository-inventory.csv  review-events.csv  review-response-updates.csv  validation.py
research/ai-code-review-study/comparison/: report.md
research/ai-code-review-study/comparison/sources/: commands.md  evidence-index.md  excluded-review-iterations.csv  file-inventory.txt  matched-findings.csv  matched-prs.csv  semantic-overlap.csv  thread-extracts.md
research/ai-code-review-study/figures/: comparison-metrics.csv  generate-comparison-chart.py
research/ai-code-review-study/latex/: preamble.tex  style_docx.py  table-widths.lua
research/ai-code-review-study/ocr/: report.md
research/ai-code-review-study/ocr/duplicates/: _collect.py  report.md
research/ai-code-review-study/ocr/provider-quality/: build_dataset.py  commands.md  evidence-index.md  file-inventory.txt  matched-reruns.csv  methodology.md  provider-findings.csv  provider-runs.csv  quality-summary.csv  report.md  (+2 more)
review-configs/: README.md
review-configs/coderabbit/: .coderabbit.yaml  README.md
review-configs/ocr/: README.md  ocr-review.yml  open-code-review.toml  review-prompt.md  rule.json
review-configs/ocr/includes/: python.json  rust.json  typescript.json
skills/: README.md  install.sh
skills/coderabbit-review/: SKILL.md
skills/open-code-review/: SKILL.md
(+24 files in other folders)
